--- a/Projet-Ruche/pom.xml
+++ b/Projet-Ruche/pom.xml
@@ -4,12 +4,19 @@
   <artifactId>Projet-Ruche</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
-  <dependencies>
+   <dependencies>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.0.8</version>
 		</dependency>
+		
+			<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.5.7.Final</version>
+		</dependency>
+
 	</dependencies>
 	
 	
