--- a/Projet-Ruche/pom.xml
+++ b/Projet-Ruche/pom.xml
@@ -3,6 +3,7 @@
   <groupId>formation-sopra</groupId>
   <artifactId>Projet-Ruche</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
   
 	<properties>
 		<maven.compiler.source>17</maven.compiler.source>
@@ -33,6 +34,20 @@
 		    <version>${spring.version}</version>
 		</dependency>
 		
+		    <!-- SPRING WEB MVC -->
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-webmvc</artifactId>
+    	<version>${spring.version}</version>
+    </dependency>
+    
+    	<!-- SPRING DATA JPA -->
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-jpa</artifactId>
+		    <version>3.0.3</version>
+		</dependency>
+		
 		<!-- Gestionnaire de pool de connexion : DBCP2 -->
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
@@ -40,7 +55,7 @@
 		    <version>2.9.0</version>
 		</dependency>
 		
-		
+		<!-- JPA et DRIVER pour jakarta -->
 		<dependency>
 		    <groupId>org.hibernate</groupId>
 		    <artifactId>hibernate-core</artifactId>
@@ -58,6 +73,33 @@
 		    <groupId>org.springframework.data</groupId>
 		    <artifactId>spring-data-jpa</artifactId>
 		    <version>3.0.3</version>
+		</dependency>
+
+		<!-- JSTL -->
+		<dependency>
+		    <groupId>jakarta.servlet.jsp.jstl</groupId>
+		    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.glassfish.web</groupId>
+		    <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+		
+		<!-- Validation -->
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>8.0.0.Final</version>
+		</dependency>
+		
+		<!-- pour gérer les objets en api  -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.14.2</version>
 		</dependency>
 
 	</dependencies>
