--- a/Projet-Ruche/pom.xml
+++ b/Projet-Ruche/pom.xml
@@ -101,6 +101,13 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.14.2</version>
 		</dependency>
+		
+		<!-- LocalDate  -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-jsr310</artifactId>
+		    <version>2.14.2</version>
+		</dependency>
 
 	</dependencies>
 	
